[package]
name = "bin_patch"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3"]

[dependencies.bin_patch_mac]
path = "../bin_patch_mac"

[dependencies.windows-sys]
version = "0.48.0"
features = ["Win32_Foundation", "Win32_System_Memory"]
