[package]
name = "d2fps"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[lib]
name = "d2fps"
crate-type = ["cdylib"]

[dependencies]
gcd = "2.3.0"
arrayvec = "0.7.2"
crossbeam-channel = "0.5.8"
parking_lot = "0.12.1"

[dependencies.once_cell]
version = "1.17.1"
default-features = false
features = ["std", "parking_lot"]

[dependencies.d2interface]
path = "../d2interface"

[dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Devices_Display",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Performance",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]
