[package]
name = "d2interface"
version = "0.0.0"
edition = "2021"
authors = ["Jason Newcomb <jsnewcomb@pm.me>"]
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-sys]
version = "0.48.0"
features = ["Win32_Foundation", "Win32_System_LibraryLoader"]
